--- a/web/view/cadastroTipo.twig
+++ b/web/view/cadastroTipo.twig
@@ -10,7 +10,7 @@
             </header>
         </div>
         <div class="row col-sm-8 col-sm-offset-2">
-            <form name="frmTipo" action="{{ path('tipoSalvar')}}" method="POST">
+            <form name="frmCadastro" action="{{ path('tipoSalvar')}}" method="POST">
                 <fieldset>
                     <div class="form-group col-sm-6">
                         <label for="descricao">Descrição</label>
