--- a/web/view/cadastroAcao.twig
+++ b/web/view/cadastroAcao.twig
@@ -5,104 +5,55 @@
     <div class="container">
         <div class="row col-sm-8 col-sm-offset-2">
             <header>
-                <h2><span class="fa fa-leaf" aria-hidden="true"></span>&nbsp;Ação</h2>
+                <h2><span class="fa fa-leaf" aria-hidden="true"></span>&nbsp;Ação social</h2>
                 <small>ações sociais oferecidas pela instituição</small>
             </header>
         </div>
         <div class="row col-sm-8 col-sm-offset-2">
-            <form name="frmTipo" action="{{ path('acaoSalvar')}}" method="POST">
+            <form name="frmCadastro" action="{{ path('acaoSalvar')}}" method="POST">
+                <div class="form-group form-check-inline">
+                    <label class="form-check-label">Atendimento
+                        <input type="radio" id="tipo_acao" name="tipo_acao" class="form-check-input" value="A" checked="true">
+                    </label>
+                    <label class="form-check-label">Turma
+                        <input type="radio" id="tipo_acao" name="tipo_acao" class="form-check-input" value="T">
+                    </label>
+                </div>
                 <fieldset>
-                <legend><i class="glyphicon glyphicon-menu-right"></i><b>Dados pessoais</b></legend>
+                <legend><i class="glyphicon glyphicon-menu-right"></i><b>Dados básicos</b></legend>
                     <div class="form-group col-sm-6">
                         <label for="nome">Nome</label>
-                        <input type="text" id="nome" class="form-control" placeholder="Seu nome completo" autofocus required>
-                    </div>
-                    <div class="form-group form-check-inline col-sm-2 col-sm-offset-1">
-                        <label for="genero" class="form-check-label">Sexo</label><br />
-                        <label class="form-check-label">M
-                            <input type="radio" id="genero" name="genero" class="form-check-input" value="M">
-                        </label>
-                        <label class="form-check-label">F
-                            <input type="radio" id="genero" name="genero" class="form-check-input" value="F">
-                        </label>
+                        <input type="text" id="nome" class="form-control" placeholder="O nome da ação social" autofocus required>
                     </div>
                     <div class="form-group col-sm-3">
-                        <label for="estado_civil" class="form-check-label">Estado Civil</label><br />
-                        <select class="form-control" id="estado_civil" required>
-                            <option value="">Selecione</option>
-                        </select>
+                        <label for="inicio">Início</label>
+                        <input type="date" id="inicio" class="form-control" placeholder="dd/mm/aaaa" required>
                     </div>
                     <div class="form-group col-sm-3">
-                        <label for="dataNascimento">Nascimento</label>
-                        <input type="date" id="dataNascimento" class="form-control" placeholder="dd/mm/aaaa" required>
-                    </div>
-                    <div class="form-group col-sm-2">
-                        <label for="numRG">RG</label>
-                        <input type="number" id="numRG" class="form-control" placeholder="9.999.999" required>
-                    </div>
-                    <div class="form-group col-sm-3">
-                        <label for="numCPF">CPF</label>
-                        <input type="number" id="numCPF" class="form-control" placeholder="999.999.999-99">
-                    </div>
-                    <div class="form-group col-sm-4">
-                        <label for="nacionalidade">Nacionalidade</label>
-                        <input type="text" id="naturalidade" class="form-control" placeholder="Brasíleira" required>
-                    </div>
-                </fieldset>
-                <legend><i class="glyphicon glyphicon-menu-right"></i><b>Endereço</b></legend>
-                    <div class="form-group col-sm-5">
-                        <label for="endereco">Endereço</label>
-                        <input type="text" id="endereco" class="form-control" placeholder="SQN 915 Bloco A Apt 108" required>
-                    </div>
-                    <div class="form-group col-sm-4">
-                        <label for="cidade">Cidade</label>
-                        <input type="text" id="cidade" class="form-control" placeholder="Asa Norte" required>
-                    </div>
-                    <div class="form-group col-sm-1">
-                        <label for="uf">UF</label>
-                        <select class="form-control" id="uf" required>
-                            <option value="">Selecione</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-sm-2">
-                        <label for="cep">CEP</label>
-                        <input type="number" id="cep" class="form-control" placeholder="70000000">
-                    </div>
-                </fieldset>
-                <legend><i class="glyphicon glyphicon-menu-right"></i><b>Contato</b></legend>
-                    <div class="form-group col-sm-4">
-                        <label for="telefone">Telefone</label>
-                        <input type="text" id="telefone" class="form-control" placeholder="61999998888" required>
-                    </div>
-                    <div class="form-group col-sm-2">
-                        <label for="tipo_telefone">Tipo</label>
-                        <select class="form-control" id="tipo_telefone" required>
-                            <option value="">Selecione</option>
-                        </select>
+                        <label for="termino">Término</label>
+                        <input type="date" id="termino" class="form-control" placeholder="dd/mm/aaaa" required>
                     </div>
                     <div class="form-group col-sm-6">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" class="form-control" placeholder="xxx@email.com">
+                        <label for="publico-alvo">Público-alvo</label>
+                        <input type="text" id="publico-alvo" class="form-control" placeholder="adolescentes, maiores de 12 anos e de ambos os sexos">
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="pre-requisito">Pré-requisito</label>
+                        <input type="text" id="pre-requisito" class="form-control" placeholder="estar na 4ª série, ter feito informática básica">
+                    </div>
+                    <div class="form-group">
+                        <label for="voluntario">Voluntário</label>
+                        <select class="form-control" id="voluntario" required>
+                            <option value="">Selecione</option>
+                        </select>
                     </div>
                 </fieldset>
-                <fieldset>
-                <legend><i class="glyphicon glyphicon-menu-right"></i><b>Dados do voluntário</b></legend>
-                    <div class="form-group col-sm-4">
-                        <label for="profissao">Profissão</label>
-                        <input type="text" id="profissao" class="form-control" placeholder="Em que vc trabalha" required>
-                    </div>
-                    <div class="form-group form-check-inline col-sm-3 col-sm-offset-1">
-                        <label for="assinouTermo" class="form-check-label">Assinou o termo</label><br />
-                        <label class="form-check-label">Sim
-                            <input type="checkbox" id="assinouTermo" class="form-check-input" value="S">
-                        </label>
-                        <label class="form-check-label">Não
-                            <input type="checkbox" id="assinouTermo" class="form-check-input" value="N">
-                        </label>
-                    </div>
-                    <div class="form-group col-sm-4">
-                        <label for="conhecimento">Conhecimentos</label>
-                        <textarea class="form-control" id="conhecimento" rows="5"></textarea>
+                <fieldset disabled>
+                <legend><i class="glyphicon glyphicon-menu-right"></i><b>Usuários</b></legend>
+                    <div class="form-group">
+                        <select class="form-control" id="usuario" required>
+                            <option value="">Selecione</option>
+                        </select>
                     </div>
                 </fieldset>
                 <div class="form-group col-sm-12 text-center">
