--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -106,7 +106,7 @@
                 <p class="copyright text-muted">Faça parte da nossa comunidade</p>
                 <ul class="list-inline text-center">
                     <li>
-                        <a href="https://www.facebook.com/brinquecoin/">
+                        <a href="https://www.facebook.com/impacto-social-na-pratica/">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -115,7 +115,7 @@
                     </li>
                 </ul>
                 <p class="copyright text-muted">
-                <span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span>brinquecoin@brinquecoin.com</p>
+                <span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span>impacto@social.com</p>
             </div>
         </div>
     </div>
