Revisao das entidades de acao, atendimento e frequencia apos a montagem das telas

--- a/web/view/cadastroAcao.twig
+++ b/web/view/cadastroAcao.twig
@@ -41,6 +41,40 @@
                         <label for="pre-requisito">Pré-requisito</label>
                         <input type="text" id="pre-requisito" class="form-control" placeholder="estar na 4ª série, ter feito informática básica">
                     </div>
+                    <div class="form-group form-check-inline col-sm-8">
+                        <label for="dia" class="form-check-label">Dia</label><br />
+                        <label class="form-check-label">Seg
+                            <input type="checkbox" id="dia" class="form-check-input" value="Seg">
+                        </label>
+                        <label class="form-check-label">Ter
+                            <input type="checkbox" id="dia" class="form-check-input" value="Ter">
+                        </label>
+                        <label class="form-check-label">Qua
+                            <input type="checkbox" id="dia" class="form-check-input" value="Qua">
+                        </label>
+                        <label class="form-check-label">Qui
+                            <input type="checkbox" id="dia" class="form-check-input" value="Qui">
+                        </label>
+                        <label class="form-check-label">Sex
+                            <input type="checkbox" id="dia" class="form-check-input" value="Sex">
+                        </label>
+                        <label class="form-check-label">Sáb
+                            <input type="checkbox" id="dia" class="form-check-input" value="Sab">
+                        </label>
+                        <label class="form-check-label">Dom
+                            <input type="checkbox" id="dia" class="form-check-input" value="Dom">
+                        </label>
+                    </div>   
+                    <div class="form-group col-sm-2">
+                        <label for="horario">Horário</label>
+                        <input type="time" id="horario" class="form-control" placeholder="12:00">
+                    </div>
+                    <div class="form-group col-sm-2">
+                        <label for="turno">Turno</label>
+                        <select class="form-control" id="turno" required>
+                            <option value="">Selecione</option>
+                        </select>
+                    </div>
                     <div class="form-group">
                         <label for="voluntario">Voluntário</label>
                         <select class="form-control" id="voluntario" required>
