--- a/web/view/cadastroAtendimento.twig
+++ b/web/view/cadastroAtendimento.twig
@@ -28,7 +28,7 @@
                         </select>
                     </div>
                     <div class="form-group col-sm-3">
-                        <label for="data">Dia</label>
+                        <label for="data">Data</label>
                         <input type="date" id="data" class="form-control" placeholder="dd/mm/aaaa" required>
                     </div>
                     <div class="form-group">
