--- a/web/view/cadastroVoluntario.twig
+++ b/web/view/cadastroVoluntario.twig
@@ -14,101 +14,134 @@
                 <fieldset>
                 <legend><i class="glyphicon glyphicon-menu-right"></i><b>Dados pessoais</b></legend>
                     <div class="form-group col-sm-3">
-                        <label for="numCPF">CPF</label>
-                        <input type="number" id="numCPF" class="form-control" placeholder="999.999.999-99">
+                        <label for="CPF">CPF</label>
+                        <input type="text" name="CPF" class="form-control" placeholder="999.999.999-99" required autofocus value="{% if voluntario is defined %}{{ voluntario.pessoa.CPF }}{% endif %}">
                     </div>
                     <div class="form-group col-sm-9">
                         <label for="nome">Nome</label>
-                        <input type="text" id="nome" class="form-control" placeholder="Seu nome completo" autofocus required>
+                        <input type="text" name="nome" class="form-control" placeholder="Seu nome completo" required value="{% if voluntario is defined %}{{ voluntario.pessoa.nome }}{% endif %}">
                     </div>
                     <div class="clearfix"></div>
                     <div class="form-group col-sm-3">
-                        <label for="dataNascimento">Nascimento</label>
-                        <input type="date" id="dataNascimento" class="form-control" placeholder="dd/mm/aaaa" required>
+                        <label for="nascimento">Nascimento</label>
+                        <input type="date" name="nascimento" class="form-control" placeholder="dd/mm/aaaa" required value="{% if voluntario is defined %}{{ voluntario.pessoa.dataNascimento | date("d/m/Y") }}{% endif %}">
                     </div>
                     <div class="form-group col-sm-2">
-                        <label for="numRG">RG</label>
-                        <input type="number" id="numRG" class="form-control" placeholder="9.999.999" required>
+                        <label for="RG">RG</label>
+                        <input type="text" name="RG" class="form-control" placeholder="9.999.999" value="{% if voluntario is defined %}{{ voluntario.pessoa.RG }}{% endif %}">
                     </div>
                     <div class="form-group col-sm-3">
                         <label for="estado_civil" class="form-check-label">Estado Civil</label><br />
-                        <select class="form-control" id="estado_civil" required>
+                        <select class="form-control" name="estado_civil" required>
                             <option value="">Selecione</option>
+                            {% for estado_civil in estados_civis %}
+                            <option value="{{ estado_civil.id }}" {% if voluntario is defined and voluntario.pessoa.estadoCivil.id == estado_civil.id %} selected {% endif %}>{{ estado_civil.descricao }}</option>
+                            {% endfor %} 
                         </select>
                     </div>
                     <div class="form-group col-sm-4">
                         <label for="nacionalidade">Nacionalidade</label>
-                        <input type="text" id="naturalidade" class="form-control" placeholder="Brasíleira" required>
+                        <input type="text" name="nacionalidade" class="form-control" placeholder="Brasíleira" required value="{% if voluntario is defined %}{{ voluntario.pessoa.nacionalidade }}{% endif %}">
                     </div>
                     <div class="form-group form-check-inline col-sm-2">
-                        <label for="genero" class="form-check-label">Sexo</label><br />
+                        <label for="sexo" class="form-check-label">Sexo</label><br />
                         <label class="form-check-label">M
-                            <input type="radio" id="genero" name="genero" class="form-check-input" value="M">
+                            <input type="radio" name="sexo" class="form-check-input" value="M" {% if voluntario is defined and voluntario.pessoa.sexo == 'M' %} checked="true" {% endif %}>
                         </label>
                         <label class="form-check-label">F
-                            <input type="radio" id="genero" name="genero" class="form-check-input" value="F">
+                            <input type="radio" name="sexo" class="form-check-input" value="F" {% if voluntario is defined and voluntario.pessoa.sexo == 'F' %} checked="true" {% endif %}>
                         </label>
                     </div>                    
                     <div class="form-group col-sm-7">
                         <label for="profissao">Profissão</label>
-                        <input type="text" id="profissao" class="form-control" placeholder="Costureira">
+                        <input type="text" name="profissao" class="form-control" placeholder="Costureira" value="{% if voluntario is defined %}{{ voluntario.pessoa.profissao }}{% endif %}">
                     </div>
                     <div class="form-group col-sm-3">
-                        <label for="nis">NIS</label>
-                        <input type="number" id="nis" class="form-control" placeholder="999999999999">
+                        <label for="NIS">NIS</label>
+                        <input type="text" name="NIS" class="form-control" placeholder="999999999999" value="{% if voluntario is defined %}{{ voluntario.pessoa.NIS }}{% endif %}">
                     </div>
                 </fieldset>
                 <fieldset>
                 <legend><i class="glyphicon glyphicon-menu-right"></i><b>Endereço</b></legend>
                     <div class="form-group col-sm-5">
                         <label for="endereco">Endereço</label>
-                        <input type="text" id="endereco" class="form-control" placeholder="SQN 915 Bloco A Apt 108" required>
+                        <input type="text" name="endereco" class="form-control" placeholder="SQN 915 Bloco A Apt 108" required value="{% if voluntario is defined %}{{ voluntario.pessoa.endereco }}{% endif %}">
                     </div>
                     <div class="form-group col-sm-4">
                         <label for="cidade">Cidade</label>
-                        <input type="text" id="cidade" class="form-control" placeholder="Asa Norte" required>
+                        <input type="text" name="cidade" class="form-control" placeholder="Asa Norte" required value="{% if voluntario is defined %}{{ voluntario.pessoa.cidade }}{% endif %}">
                     </div>
                     <div class="form-group col-sm-1">
                         <label for="uf">UF</label>
-                        <select class="form-control" id="uf" required>
+                        <select class="form-control" name="uf" required>
                             <option value="">Selecione</option>
+                            <option value="AC" {% if voluntario is defined and voluntario.pessoa.uf == 'AC' %} selected {% endif %}>AC</option>
+                            <option value="AL" {% if voluntario is defined and voluntario.pessoa.uf == 'AL' %} selected {% endif %}>AL</option>
+                            <option value="AM" {% if voluntario is defined and voluntario.pessoa.uf == 'AM' %} selected {% endif %}>AM</option>
+                            <option value="AP" {% if voluntario is defined and voluntario.pessoa.uf == 'AP' %} selected {% endif %}>AP</option>
+                            <option value="BA" {% if voluntario is defined and voluntario.pessoa.uf == 'BA' %} selected {% endif %}>BA</option>
+                            <option value="CE" {% if voluntario is defined and voluntario.pessoa.uf == 'CE' %} selected {% endif %}>CE</option>
+                            <option value="DF" {% if voluntario is defined and voluntario.pessoa.uf == 'DF' %} selected {% endif %}>DF</option>
+                            <option value="ES" {% if voluntario is defined and voluntario.pessoa.uf == 'ES' %} selected {% endif %}>ES</option>
+                            <option value="GO" {% if voluntario is defined and voluntario.pessoa.uf == 'GO' %} selected {% endif %}>GO</option>
+                            <option value="MA" {% if voluntario is defined and voluntario.pessoa.uf == 'MA' %} selected {% endif %}>MA</option>
+                            <option value="MG" {% if voluntario is defined and voluntario.pessoa.uf == 'MG' %} selected {% endif %}>MG</option>
+                            <option value="MS" {% if voluntario is defined and voluntario.pessoa.uf == 'MS' %} selected {% endif %}>MS</option>
+                            <option value="MT" {% if voluntario is defined and voluntario.pessoa.uf == 'MT' %} selected {% endif %}>MT</option>
+                            <option value="PA" {% if voluntario is defined and voluntario.pessoa.uf == 'PA' %} selected {% endif %}>PA</option>
+                            <option value="PB" {% if voluntario is defined and voluntario.pessoa.uf == 'PB' %} selected {% endif %}>PB</option>
+                            <option value="PE" {% if voluntario is defined and voluntario.pessoa.uf == 'PE' %} selected {% endif %}>PE</option>
+                            <option value="PI" {% if voluntario is defined and voluntario.pessoa.uf == 'PI' %} selected {% endif %}>PI</option>
+                            <option value="PR" {% if voluntario is defined and voluntario.pessoa.uf == 'PR' %} selected {% endif %}>PR</option>
+                            <option value="RJ" {% if voluntario is defined and voluntario.pessoa.uf == 'RJ' %} selected {% endif %}>RJ</option>
+                            <option value="RN" {% if voluntario is defined and voluntario.pessoa.uf == 'RN' %} selected {% endif %}>RN</option>
+                            <option value="RO" {% if voluntario is defined and voluntario.pessoa.uf == 'RO' %} selected {% endif %}>RO</option>
+                            <option value="RR" {% if voluntario is defined and voluntario.pessoa.uf == 'RR' %} selected {% endif %}>RR</option>
+                            <option value="RS" {% if voluntario is defined and voluntario.pessoa.uf == 'RS' %} selected {% endif %}>RS</option>
+                            <option value="SC" {% if voluntario is defined and voluntario.pessoa.uf == 'SC' %} selected {% endif %}>SC</option>
+                            <option value="SE" {% if voluntario is defined and voluntario.pessoa.uf == 'SE' %} selected {% endif %}>SE</option>
+                            <option value="SP" {% if voluntario is defined and voluntario.pessoa.uf == 'SP' %} selected {% endif %}>SP</option>
+                            <option value="TO" {% if voluntario is defined and voluntario.pessoa.uf == 'TO' %} selected {% endif %}>TO</option>
                         </select>
                     </div>
                     <div class="form-group col-sm-2">
-                        <label for="cep">CEP</label>
-                        <input type="number" id="cep" class="form-control" placeholder="70000000">
+                        <label for="CEP">CEP</label>
+                        <input type="text" name="CEP" class="form-control" placeholder="70000000" required value="{% if voluntario is defined %}{{ voluntario.pessoa.CEP }}{% endif %}">
                     </div>
                 </fieldset>
                 <fieldset>
                 <legend><i class="glyphicon glyphicon-menu-right"></i><b>Contato</b></legend>
                     <div class="form-group col-sm-4">
                         <label for="telefone">Telefone</label>
-                        <input type="text" id="telefone" class="form-control" placeholder="61999998888" required>
+                        <input type="text" name="telefone" class="form-control" placeholder="61999998888" required value="{% if voluntario is defined %}{{ voluntario.pessoa.telefone }}{% endif %}">
                     </div>
                     <div class="form-group col-sm-2">
                         <label for="tipo_telefone">Tipo</label>
-                        <select class="form-control" id="tipo_telefone" required>
+                        <select class="form-control" name="tipo_telefone" required>
                             <option value="">Selecione</option>
+                            {% for tipo_telefone in tipos_telefone %}
+                            <option value="{{ tipo_telefone.id }}" {% if voluntario is defined and voluntario.pessoa.tipoTelefone.id == tipo_telefone.id %} selected {% endif %}>{{ tipo_telefone.descricao }}</option>
+                            {% endfor %} 
                         </select>
                     </div>
                     <div class="form-group col-sm-6">
                         <label for="email">Email</label>
-                        <input type="email" id="email" class="form-control" placeholder="xxx@email.com">
+                        <input type="email" name="email" class="form-control" placeholder="xxx@email.com" required value="{% if voluntario is defined %}{{ voluntario.pessoa.email }}{% endif %}">
                     </div>
                 </fieldset>
                 <fieldset>
                 <legend><i class="glyphicon glyphicon-menu-right"></i><b>Dados do voluntário</b></legend>
                     <div class="form-group col-sm-8">
                         <label for="conhecimento">Conhecimentos</label>
-                        <textarea class="form-control" id="conhecimento" rows="5" placeholder="Fazer bolos, tirar leite, contabilidade, corrida de rua"></textarea>
+                        <textarea class="form-control" name="conhecimento" rows="5" placeholder="Fazer bolos, tirar leite, contabilidade, corrida de rua" required>{% if voluntario is defined %}{{ voluntario.conhecimento }}{% endif %}</textarea>
                     </div>
                     <div class="form-group form-check-inline col-sm-3 col-sm-offset-1">
-                        <label for="assinouTermo" class="form-check-label">Assinou o termo</label><br />
+                        <label for="assinou_termo" class="form-check-label">Assinou o termo</label><br />
                         <label class="form-check-label">Sim
-                            <input type="radio" id="assinouTermo" name="assinouTermo" class="form-check-input" value="S">
+                            <input type="radio" name="assinou_termo" class="form-check-input" value="S" {% if voluntario is defined and voluntario.assinouTermo == 'S' %} checked="true" {% endif %}>
                         </label>
                         <label class="form-check-label">Não
-                            <input type="radio" id="assinouTermo" name="assinouTermo" class="form-check-input" value="N" checked="true">
+                            <input type="radio" name="assinou_termo" class="form-check-input" value="N" {% if voluntario is defined and voluntario.assinouTermo == 'N' %} checked="true" {% endif %}>
                         </label>
                     </div>
                 </fieldset>
@@ -116,17 +149,51 @@
                     <button type="submit" class="btn btn-primary">
                         <i class="glyphicon glyphicon-ok"> Cadastrar</i>
                     </button>
-                    <button type="button" class="btn btn-default">
+                    <button type="reset" class="btn btn-default">
                         <i class="glyphicon glyphicon-remove"> Limpar</i>
                     </button>
                 </div>
-                <input type="hidden" id="tipo" value="VOL">
+                <input type="hidden" name="tipo_pessoa" value="VOL">
+                <input type="hidden" name="id" value="{% if voluntario is defined %}{{ voluntario.pessoa.id }}{% endif %}">                
             </form>
+            {% if resultado is defined %}
+            <div class="col-sm-12 text-center alert alert-success">
+                {{ resultado }}
+            </div>
+            {% endif %}
         </div>
-        {% if mensagem is defined %}
-        <div class="row alert alert-success">
-            {{ mensagem }}
-        </div>
+        {% if voluntarios is defined %}
+        <div class="row col-sm-8 col-sm-offset-2">
+            <table class="table table-responsive table-hover">
+            <caption>Voluntários cadastrados</caption>
+                <thead class="thead-light">
+                    <tr>
+                        <th class="col-sm-6">Nome</th>
+                        <th class="col-sm-2">Telefone</th>
+                        <th class="col-sm-2">Email</th>
+                        <th class="col-sm-1 text-center">Alterar</th>
+                        <th class="col-sm-1 text-center">Excluir</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% if voluntarios  | length > 0%}
+                    {% for voluntario in voluntarios %}
+                     <tr>
+                        <td>{{ voluntario.pessoa.nome }}</td>
+                        <td>{{ voluntario.pessoa.telefone }}</td>
+                        <td>{{ voluntario.pessoa.email }}</td>
+                        <td><a href="{{ path('voluntarioEditar',{'id':voluntario.pessoa.id}) }}"><span class="text-center glyphicon glyphicon-pencil"></span></a></td>
+                        <td><a href="{{ path('voluntarioExcluir',{'id':voluntario.pessoa.id}) }}"><span class="text-center glyphicon glyphicon-trash"></span></a></td>
+                    </tr>
+                    {% endfor %}
+                    {% else %}
+                    <tr>
+                        <td colspan="5">Nenhum voluntário cadastrado</td>
+                    </tr>
+                    {% endif %}                    
+                </tbody>
+            </table>
+        </div> 
         {% endif %}
     </div>
 {% endblock %}
