--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -27,9 +27,6 @@
     <!-- Form CSS -->
     <link href="{{ asset('form.css', 'css') }}" rel="stylesheet">
 
-    <!-- Quadro CSS -->
-    <link href="{{ asset('quadro.css', 'css') }}" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -135,7 +132,7 @@
     <script src="{{ asset('clean-blog.min.js', 'js') }}"></script>
 
     <!-- JavaScript do quadro -->
-    <script src="{{ asset('quadro.js', 'js') }}"></script>
+    <script src="{{ asset('copia.js', 'js') }}"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
